# Routio

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyrightconfig.json
.gitlab/issue_templates/: issue_template.md
apps/backend/: .coverage  .env.example  README.md  coverage.xml  package.json  pyproject.toml  pytest.ini  requirements.txt
apps/backend/auth_mgmt/: urls.py  views.py
apps/backend/backend/: settings.py  urls.py
apps/backend/center_mgmt/: apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/center_mgmt/migrations/: 0001_initial.py
apps/backend/driver_mgmt/: apps.py  models.py  response_schema.py  serializers.py  urls.py  views.py
apps/backend/driver_mgmt/migrations/: 0001_initial.py
apps/backend/route_mgmt/: apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/route_mgmt/migrations/: 0001_initial.py
apps/backend/tests/center_mgmt/: test_centers.py
apps/backend/tests/user_mgmt/: test_users.py
apps/backend/user_mgmt/: models.py  response_schema.py  serializer.py  urls.py  views.py
apps/backend/user_mgmt/migrations/: 0001_initial.py
apps/backend/utils/: _faker.py  auth_mgmt.py  path.py
apps/frontend/: .env.local example  package.json  tailwind.config.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/Map/: map.tsx
apps/frontend/src/app/[views]/: admin.tsx  driver.tsx  user.tsx
apps/frontend/src/app/components/: GreenImpact.tsx  Hamburger.tsx
apps/frontend/src/app/lib/api/: DriverAPi.tsx  (+2 more)
apps/frontend/src/app/profile/: page.tsx
apps/frontend/src/app/schedule/: page.tsx
(+3 files in other folders)
